# sliderepl

./: .gitignore  .hgignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
sliderepl/: __init__.py  alt_core.py  compat.py  core.py  hairy.py  main.py  menu.py  options.py
