[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliderepl"
version = "1.2"
authors = [
    { name = "Mike Bayer", email = "mike_mp@zzzcomputing.com" },
    { name = "Jason Kirtland"}
]
description = "Runs a python script as a series of slides for presentation."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
]
dependencies = [
    "pygments",
    "tomli",
    "termcolor"
]

[project.scripts]
sliderepl = "sliderepl.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude=["examples*", "test*"]
namespaces = false


[project.urls]
"Homepage" = "http://github.com/zzzeek/sliderepl"



[tool.black]
line-length = 79
