[egg_info]
tag_build = dev

[metadata]
license_file = LICENSE

[tool:pytest]
addopts= --tb native -v -r sfxX --maxfail=25 -p no:warnings -p no:logging
python_files=test/*test_*.py

[upload]
sign = 1
identity = C4DAFEE1

[flake8]
show-source = true
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    F821
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google


